--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName = org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/db1
+spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
